--- a/Sidebar-with-side-content/css/style.css
+++ b/Sidebar-with-side-content/css/style.css
@@ -1,6 +1,12 @@
+/*=============== Import Font =============*/
+@import url('https://fonts.googleapis.com/css?family=Nosifer');
+
+
+/*============ Body ================*/
 body {
-    background-color: #ddd;
+    background-color: #f1f2f6;
 }
+
 /* =========== Preloader ============ */
 .preloader {
     position: fixed;
@@ -58,7 +64,9 @@ body {
     min-height: 100vh;
     top: 0;
     left: 0;
+    box-shadow: 0 0 10px 5px #b1b1b1;
     background-color: #ffffff;
+    z-index: 10;
 }
 .nav-menu {
     display: block;
@@ -75,62 +83,172 @@ body {
     padding: 5px 0;
 }
 .nav-menu ul li a {
+    position: relative;
     display: inline-block;
-    text-decoration: none;
     color: #000000;
-    -webkit-transition: all 1s ease;
-    transition: all 1s ease;
+    font-weight: 500;
+    font-size: 16px;
+    text-transform: uppercase;
+    text-decoration: none;
+    -webkit-transition: all .3s ease;
+    transition: all .3s ease;
 }
+
+.nav-menu ul li a::before {
+    content: "";
+    display: block;
+    width: 50px;
+    height: 2px;
+    background-color: #4f6df5;
+    position: absolute;
+    top: 50%;
+    left: -106px;
+    -webkit-transform: translateY(-50%);
+    transform: translateY(-50%);
+    -webkit-transition: all .3s ease;
+    transition: all .3s ease;
+}
+
 .nav-menu ul li a:hover {
+    padding-left: 5px;
     color: #4f6df5;
 }
+.nav-menu ul li a:hover::before {
+    left: -55px;
+}
+
 .nav-menu ul li a.active {
+    padding-left: 5px;
     color: #4f6df5;
 }
-/* ============= Page Wrapper ============ */
+.nav-menu ul li a.active::before {
+    left: -55px;
+}
+/* ============= Page Wrapper && Layout ============ */
 .page-wrapper {
-    width: 100%;
-    height: 100vh;
     display: grid;
     grid-template-columns: 220px 1fr;
     grid-template-areas: 
         ". sub-page";
 }
-
 .sub-page {
     grid-area: sub-page;
 }
 
-/* ============ Section ========== */
+/* ============ Section && Page ========== */
 .sub-page {
     position: relative;
+    overflow: hidden;
+    width: 100%;
+    min-height: 100vh;
 }
 .page {
     position: absolute;
     overflow: hidden;
     width: 100%;
-    height: 0;
-    top: auto;
+    height: 100%;
+    top: 0;
     left: 0;
+    background-color: #f1f2f6;
     visibility: hidden;
     opacity: 0;
     -webkit-transition: all 1s ease-in;
     transition: all 1s ease;
 }
-.page-home {
-    background-color: #0048ff;
+/* ============= Specific Page ================*/
+
+/* .page-home {
+    width: 100%;
+    min-height: 100vh;
 }
 .page-about {
-    background-color: #ff0800;
+    width: 100%;
+    min-height: 100vh;
+    
 }
 .page-protfolio {
-    background-color: #08ceff;
+    width: 100%;
+    min-height: 100vh;
 }
+.page-service {
+    width: 100%;
+    min-height: 100vh;
+}
+.page-blog {
+    width: 100%;
+    min-height: 100vh;
+}
+.page-contact {
+    width: 100%;
+    min-height: 100vh;
+} */
+
 .current-page {
     visibility: visible;
     opacity: 1;
-    height: 100%;
+} 
+
+/*=============== Home Section ===============*/
+.page-home .personal-details .hello-text {
+    font-size: 1.3rem;
+    font-weight: 400;
 }
+.page-home .personal-details .name {
+    font-family: 'Nosifer', cursive;
+}
+.page-home .personal-details .designation {
+    font-weight: 600;
+    font-size: 2rem;
+}
+.page-home .personal-details ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+.page-home .personal-details ul li {
+    position: relative;
+    display: inline;
+    margin: 5px;
+}
+.page-home .personal-details ul li a{
+    display: inline-block;
+    font-size: 18px;
+    color: #000000;
+    font-weight: 600;
+    -webkt-transition: all .3s ease-in;
+    transition: all .3s ease-in;
+}
+.page-home .personal-details ul li a:hover {
+    color: #4f6df5;
+    -webkit-transform: scale(1.2);
+    transform: scale(1.2);
+}
+
+/*============== About Section ==============*/
+
+/*============== Service Section ==============*/
+.service-content {
+    overflow: hidden;
+}
+.service-box {
+    overflow: hidden;
+    height: 320px;
+    margin: 10px 0;
+    background-color: #ddd;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
