fixed auto height at positioned page

--- a/Sidebar-with-side-content/css/style.css
+++ b/Sidebar-with-side-content/css/style.css
@@ -1,6 +1,6 @@
 /*=============== Import Font =============*/
 @import url('https://fonts.googleapis.com/css?family=Nosifer');
-
+@import url('https://fonts.googleapis.com/css?family=Oswald');
 
 /*============ Body ================*/
 body {
@@ -60,13 +60,24 @@ body {
 /* ============= Menu Or Sidebar =========== */
 .menu-area {
     position: fixed;
-    width: 220px;
+    width: 250px;
     min-height: 100vh;
     top: 0;
     left: 0;
     box-shadow: 0 0 10px 5px #b1b1b1;
     background-color: #ffffff;
     z-index: 10;
+}
+.menu-area .logo a {
+    font-family: 'Oswald', sans-serif;
+    font-size: 1.8rem;
+    text-transform: uppercase;
+    font-weight: 600;
+    text-decoration: none;
+    background: linear-gradient(to right, #4f6df5 0%, #ff33cc 100%);
+    -webkit-background-clip: text;
+    background-clip: text;
+	-webkit-text-fill-color: transparent;
 }
 .nav-menu {
     display: block;
@@ -86,8 +97,8 @@ body {
     position: relative;
     display: inline-block;
     color: #000000;
-    font-weight: 500;
-    font-size: 16px;
+    font-weight: 600;
+    font-size: 14px;
     text-transform: uppercase;
     text-decoration: none;
     -webkit-transition: all .3s ease;
@@ -97,12 +108,12 @@ body {
 .nav-menu ul li a::before {
     content: "";
     display: block;
-    width: 50px;
+    width: 60px;
     height: 2px;
     background-color: #4f6df5;
     position: absolute;
     top: 50%;
-    left: -106px;
+    left: -124px;
     -webkit-transform: translateY(-50%);
     transform: translateY(-50%);
     -webkit-transition: all .3s ease;
@@ -114,7 +125,7 @@ body {
     color: #4f6df5;
 }
 .nav-menu ul li a:hover::before {
-    left: -55px;
+    left: -65px;
 }
 
 .nav-menu ul li a.active {
@@ -122,14 +133,16 @@ body {
     color: #4f6df5;
 }
 .nav-menu ul li a.active::before {
-    left: -55px;
+    left: -65px;
 }
 /* ============= Page Wrapper && Layout ============ */
 .page-wrapper {
     display: grid;
-    grid-template-columns: 220px 1fr;
+    grid-template-columns: 250px 1fr;
     grid-template-areas: 
         ". sub-page";
+    width: 100%;
+    height: 100%;
 }
 .sub-page {
     grid-area: sub-page;
@@ -138,23 +151,54 @@ body {
 /* ============ Section && Page ========== */
 .sub-page {
     position: relative;
-    overflow: hidden;
     width: 100%;
-    min-height: 100vh;
+    height: 100%;
 }
 .page {
     position: absolute;
     overflow: hidden;
     width: 100%;
-    height: 100%;
+    height: 0;
     top: 0;
     left: 0;
     background-color: #f1f2f6;
     visibility: hidden;
     opacity: 0;
-    -webkit-transition: all 1s ease-in;
-    transition: all 1s ease;
+    -webkit-transition: all 1.5s ease-in;
+    transition: all 1.5s ease;
 }
+.page-content {
+    width: 100%;
+    min-height: 100vh;
+    padding: 100px 0;
+}
+.page-title .title-text{
+    display: inline-block;
+    position: relative;
+    text-transform: uppercase;
+    font-size: 3rem;
+    font-weight: 600;
+    padding: 0 60px;
+}
+.page-title .title-text::before {
+    content: "";
+    position: absolute;
+    width: 50px;
+    height: 4px;
+    background-color: #000000;
+    top: 50%;
+    left: 0;
+}
+.page-title .title-text::after {
+    content: "";
+    position: absolute;
+    width: 50px;
+    height: 4px;
+    background-color: #000000;
+    top: 50%;
+    right: 0;
+}
+
 /* ============= Specific Page ================*/
 
 /* .page-home {
@@ -184,8 +228,9 @@ body {
 } */
 
 .current-page {
-    visibility: visible;
+    height: auto;
     opacity: 1;
+    visibility: visible;
 } 
 
 /*=============== Home Section ===============*/
@@ -225,6 +270,13 @@ body {
 }
 
 /*============== About Section ==============*/
+.about-content  {
+    overflow: hidden;
+}
+
+
+/*============== Protfolio Section ============*/
+
 
 /*============== Service Section ==============*/
 .service-content {
@@ -233,7 +285,7 @@ body {
 .service-box {
     overflow: hidden;
     height: 320px;
-    margin: 10px 0;
+    margin: 15px 0;
     background-color: #ddd;
 }
 
